--- a/package.json
+++ b/package.json
@@ -1,44 +1,18 @@
 {
-  "name": "react-animated-charts",
+  "name": "animated-charts",
   "version": "0.1.0",
-  "description": "Plug-and-play animated chart components for React, built with Tailwind CSS and Framer Motion.",
+  "description": "Animated chart web components for all frameworks (React, Angular, Vue, HTML)",
   "main": "dist/index.js",
-  "module": "dist/index.esm.js",
-  "types": "dist/index.d.ts",
+  "module": "dist/index.mjs",
+  "types": "dist/types/index.d.ts",
   "files": ["dist", "src"],
   "scripts": {
-    "build": "tsc && vite build",
-    "dev": "vite",
-    "test": "jest",
-    "lint": "eslint src --ext .ts,.tsx"
+    "build": "stencil build",
+    "start": "stencil build --dev --watch"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/yourusername/react-animated-charts.git"
-  },
-  "keywords": [
-    "react",
-    "charts",
-    "animated",
-    "tailwindcss",
-    "framer-motion",
-    "visualization",
-    "dashboard"
-  ],
   "author": "Your Name <your.email@example.com>",
   "license": "MIT",
-  "peerDependencies": {
-    "react": ">=17.0.0",
-    "react-dom": ">=17.0.0",
-    "tailwindcss": ">=3.0.0",
-    "framer-motion": ">=7.0.0"
-  },
   "devDependencies": {
-    "typescript": "^5.0.0",
-    "vite": "^4.0.0",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "jest": "^29.0.0",
-    "eslint": "^8.0.0"
+    "@stencil/core": "^4.0.0"
   }
 } 
