--- a/package.json
+++ b/package.json
@@ -5,14 +5,21 @@
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/types/index.d.ts",
-  "files": ["dist", "src"],
+  "files": [
+    "dist",
+    "src"
+  ],
   "scripts": {
     "build": "stencil build",
-    "start": "stencil build --dev --watch"
+    "start": "stencil build --dev --watch",
+    "test": "stencil test --spec --coverage"
   },
   "author": "Your Name <your.email@example.com>",
   "license": "MIT",
   "devDependencies": {
-    "@stencil/core": "^4.0.0"
+    "@stencil/core": "^4.35.3",
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0",
+    "jest-cli": "^29.7.0"
   }
-} 
+}
